--- a/Module №5. WEB-dev/7. Django Rest Framework/pyproject.toml
+++ b/Module №5. WEB-dev/7. Django Rest Framework/pyproject.toml
@@ -12,6 +12,8 @@ djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
 environs = "^9.5.0"
 pillow = "^10.1.0"
+django-filter = "^23.3"
+django-debug-toolbar = "^4.2.0"
 
 
 [build-system]
